syntax = "proto3";
package kepler.restaking.module;

import "cosmos/app/v1alpha1/module.proto";

// Module is the config object for the module.
message Module {
  option (cosmos.app.v1alpha1.module) = {go_import: "github.com/dittonetwork/kepler/x/restaking"};

  // bech_32_prefix_validator is the bech32 prefix for validator addresses.
  string bech32_prefix_validator = 1;

  // bech_32_prefix_consensus is the bech32 prefix for consensus addresses.
  string bech32_prefix_consensus = 2;

  // authority defines the custom module authority. If not set, defaults to the committee module.
  string authority = 3;

  // main_epoch_id is the main epoch ID. If not set, defaults to "hour".
  string main_epoch_id = 4;
}
